[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
flamegraph = "0.6.4"
lazy_static = "1.4.0"
num = "0.4.1"
regex = "1.10.2"

[profile.release]
debug = true